fix some align

--- a/practice/src/stylesheet/components/_card.scss
+++ b/practice/src/stylesheet/components/_card.scss
@@ -95,7 +95,7 @@
     &__desc {
         font-size: pxToRem(18);
         display: -webkit-box;
-        -webkit-line-clamp: 4;
+        -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;  
         overflow: hidden;
         
