--- a/practice/src/stylesheet/components/_text.scss
+++ b/practice/src/stylesheet/components/_text.scss
@@ -12,7 +12,7 @@
     font-size: pxToRem(18);
     line-height: pxToRem(22);
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;  
     overflow: hidden;
     &--center {
