--- a/practice/src/stylesheet/pages/home/_about.scss
+++ b/practice/src/stylesheet/pages/home/_about.scss
@@ -70,7 +70,7 @@
 
         @include mobile {
             width: 100%;
-            max-width: 250px;
+            max-width: 198px;
             font-size: pxToRem(16);
         }
     }
